# art2s3

./: README.md  pyproject.toml
art2s3/: cli.py  sync.py
tests/: test_art2s3.py
