[tool.poetry]
name = "art2s3"
version = "0.1.0"
description = ""
authors = ["Gerald Manipon <pymonger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
dohq-artifactory = "^0.7.574"
smart-open = {extras = ["s3"], version = "^5.0.0"}
boto3 = "^1.17.73"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
